css/style.css
/*=============================================================================
 * Master Stylesheet ~
 *    Styles all website pages for personal portfolio website with CSS3,
 *    also working with JavaScript for increased dynamic content to the page
 * 
 * Author(s): Alexander Del Brocco                                               
 * Started  : 30th of January, 2024
=============================================================================*/

/* Sitewide Properties -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
 *  ~ Properties applied throughout the site
-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-*/

@import url(
  'https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap'
);

* {
  box-sizing: border-box;
  font-family: Verdana, Geneva, Tahoma, sans-serif;
  margin: 0;
  padding: 0;
}

:root {
  --dead-black: #000000;
  --site-black: #0c0908;
  --site-teal: #008080;
  --site-teal-w: #92C9C9;
  --text-white: #AAAAAA;
  --text-grey: #AAAAAA;
  --site--white: #EEEEEE;

  --full-width: 99.5vw; /* .5 for scrollbar */
  --full-height: 100vh;

  --font-size: calc((1vh + 1vw) * .5);

  --nav-bar-height: 5vh;
}

html {
  background-color: var(--dead-black);
  font-size: var(--font-size);
  width: var(--full-width);
  height: var(--full-height);
  scroll-behavior: smooth;
  overflow-x: hidden;
}

h1 {
  font-size: 2.5rem;
}

h2 {
  font-size: 2rem;
}

h3 {
  font-size: 2rem;
}

hr {
  width: 100%;
}

p {
  color: var(--text-grey);
  font-size: 1.5rem;
  text-align: left;
}

a {
  text-decoration: none;
}



header { /*------------------------------------------------------------------*/
  width: var(--full-width);
  height: var(--nav-bar-height);
}

nav {
  background-color: var(--site-black);
  color: var(--site-teal);
  font-size: var(--font-size);
  height: fit-content;
  position: fixed;
  width: 99.5vw;
  height: var(--nav-bar-height);
  z-index: 200;
  display: flex;
  justify-content: space-between;
  border-bottom: 1px var(--site-teal) double;
}

nav div {
  display: flex;
  align-items: center;
  justify-content: left;
  width: 50%;
  height: 100%;
}

nav div h1 {
  font-size: 2rem;
  margin-left: 6vw;
}

nav ul {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  list-style: none;
  align-items: center;
}

nav ul li {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 30%;
  height: 100%;
}

nav ul a {
  animation: navFizzOut .2s;
  background-color: var(--site-black);
  color: var(--site-teal);
  font-weight: 450;
  font-size: 1.5rem;
  text-decoration: none;
  display: flex;
  text-align: center;
  align-items: center;
  justify-content: center;
  position: relative;
  width: 100%;
  height: 100%;
  transition: all ease .2s;
} nav ul li a:hover {
  animation: navFizzIn .2s;
  background-color: var(--site-teal);
  color: var(--text-white);
  top: 2px;
}


main { /*--------------------------------------------------------------------*/
  min-height: 100vh;
  height: auto;
}

#homepage-intro {
  background-color: var(--site-black);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100vh;
  width: 100vw;
}

#homepage-intro div {
  background: var(--dead-black);
}

#homepage-intro .contents {
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: space-around;
  align-items: center;
  flex-direction: column;
}

#homepage-intro p {
  color: var(--text-grey);
  font-size: 1.7em;
}

#homepage-intro .button-box {
  width: 50%;
  height: 20%;
  display: flex;
  align-items: center;
  justify-content: center;
  border-bottom: #AAAAAA solid 1px;
}

.button-box button {
  margin: 0% 5%;
}

.terminal {
  background: #0c0908;
  padding: 1.5rem 2rem;
  font-family: 'JetBrains Mono', 'Courier New', Courier, monospace;
  min-height: 120px;
  height: 70%;
  width: 80%;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.terminal-text {
  font-size: 24px;
  line-height: 1.7;
  color: var(--text-grey);
  font-family: 'JetBrains Mono', 'Courier New', Courier, monospace;
  white-space: pre-wrap;
  word-break: break-word;
}

.cursor {
  display: inline-block;
  width: 8px;
  height: 1.1em;
  background: var(--text-grey);
  vertical-align: text-bottom;
  margin-left: 1px;
  animation: blink 1s step-end infinite;
}

@keyframes blink {
  0%, 100% { opacity: 1; }
  50%       { opacity: 0; }
}

button.styled {
  background-color: var(--dead-black);
  box-sizing: border-box;
  border: #000000 solid 1px;
  float: left;
  margin: 0% 1.25%;
  padding: 2% 2%;
  transition: ease .2s;
} button.styled a {
  color: var(--text-white);
  font-family: 'JetBrains Mono', 'Courier New', Courier, monospace;
  text-decoration: underline;
  position: relative;
  top: 0px;
  font-size: 1.5rem;
  transition: ease .2s;
  width: 100%;
  height: 100%;
} button.styled:hover {
  border-radius: 4%/10%;
  border: 1px var(--site-teal) solid;
  border-color: #284854;
  border-radius: 2%/4%;
  color: #284854;
} button.styled:hover a {
  color: #284854;
  text-decoration: transparent;
  top: -1px;
}


#homepage-breakdown {
  display: grid;
  grid-template-columns: repeat(12, 1fr);
  gap: 10vh;
  background-color: #04010A;
  padding: 10%;
  min-height: 100vh;
  width: 100vw;
  height: auto;
}

#homepage-breakdown .section {
  grid-column: 1 / 13;
    border: .5px var(--text-white) solid transparent;
  display: grid;
  grid-template-columns: repeat(12, 1fr);
  background-color: var(--dead-black);
  border-radius: 6px;
  position: relative;
  top: 0px;
} #homepage-breakdown .section::before {
  content: '';
  position: absolute;
  inset: 0;
  border-radius: inherit;
  background: linear-gradient(
    0deg, 
    #008080 0%, 
    #004747 12%, 
    #0C0908 50%, 
    #000000 100%
  );
  opacity: 0;
  transition: opacity 1s linear;
}

#homepage-breakdown .section:hover::before {
  opacity: 1;
}

#homepage-breakdown .section:hover {
  top: -10px;
  border: .5px var(--text-white) solid;
}

#homepage-breakdown .section > * {
  position: relative;
  z-index: 1;
}

@media (max-width: 768px) {

  .section {
    max-width: 390px;
  }

  main.homepage {
    height: 340%;
  }

  #homepage-breakdown {
    height: auto;
    min-height: 100vh;
    grid-auto-rows: auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 5vh;
    width: 100vw;
    padding: 2%;
    margin: 0%;
    border-radius: 6px;
  }

  #homepage-breakdown .section {
    grid-auto-columns: max-content;
    grid-template-columns: 1fr; 
    display: flex;
    min-height: 40vh;
    height: auto;
    flex-direction: column;
    border-radius: 6px;
    transition: 1s ease-in;
  }

  #homepage-breakdown p {
    font-size: clamp(2.5rem, calc((1vh + 1vw) * 0.5), 3rem);
  }
  
  .left-panel,
  .right-panel,
  .conv-left-panel,
  .conv-right-panel {
    grid-column: 1 / 13; 
    width: 100%;
  }

  .conv-left-panel {
    order: 2; 
  }

  img.in-container {
    width: 100%;
    height: 100%;
    border-radius: 6px;
  }
}

.left-panel {
  grid-column: 1 / 4;
}

.right-panel {
  grid-column: 4 / 13;
}

.conv-left-panel {
  grid-column: 1 / 10;
}

.conv-right-panel {
  grid-column: 10 / 13;
}

#lean-left {
  left: 0px;
  position: relative;
  transition: ease .4s;
} #lean-left:hover {
  left: -10px;
}

#lean-right {
  right: 0px;
  position: relative;
  transition: ease .4s;
} #lean-right:hover {
  animation: sectionLeanLeft .2s; 
  right: -10px;
}

.centre-width {
  width: var(--full-width);
  display: flex;
}

.left-column {
  height: 100%;
  float: left;
  width: 50%;
}

.right-column {
  height: 100%;
  float: right;
  width: 50%;
}

img.in-container {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

#homepage-breakdown img.in-container {
  border-radius: 6px;
}

p.in-container {
  width: 100%;
  height: 100%;
}

#homepage-breakdown .contents {
  border-radius: 1%/2%;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
  padding: 0% 5% 2% 2%;
  position: relative;
  top: 0px;
  transition: top ease 0.4s;
}

.h-box {
  border-bottom: 1px var(--text-white) solid;
  padding: 2% 1%;
  margin: 0% 0 2% 0;
  overflow: hidden;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.h-box .left-column {
  width: 80%;
}

.h-box .right-column {
  width: 20%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
  font-size: 1rem;
}

#homepage-breakdown h2 {
  font-size: 3em;
  color: var(--site-teal);
  margin: 0;
  transition: all linear .2s;
} #homepage-breakdown h2:hover {
  color: #92C9C9;
}

#homepage-breakdown h3 {
  color: #888888;
  font-size: 2em;
  margin: 0;
} #homepage-breakdown h3 a {
  color: #888888;
  transition: all .1s;
} #homepage-breakdown h3 a:hover {
  text-decoration: underline;
  color: var(--text-white);
}

#homepage-breakdown .text-box {
  height: 100%;
  width: 100%;
} #homepage-breakdown .text-box p {
  font-size: clamp(2rem, calc((1vh + 1vw) * 0.5), 3rem);
  height: 100%;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: right;
  font-family: Verdana, Geneva, Tahoma, sans-serif;
}

#homepage-breakdown .right-column p {
  color: var(--text-grey);
  font-size: 1.2rem;
}

#homepage-breakdown .button-box {
  width: 100%;
  height: fit-content;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  background-color: var(--site-black);
} #homepage-breakdown .button-box a {
  font-size: 2rem;
  font-family: 'Courier New', Courier, monospace;
  padding: 10% 5%;
}

#in-row {
  display: flex;
  flex-direction: row;
  text-align: center;
}

.fade-in {
  opacity: 0;

  transition: all 1s ease-in;
}

.hidden-left {
  opacity: 0;
  transform: translateX(-100%);
  filter: blur(2px);
  transition: opacity .7s, transform .7s;
}

.hidden-right {
  opacity: 0;
  transform: translateX(100%);
  filter: blur(2px);
  transition: opacity .7s, transform .7s;
}

.show {
  opacity: 1 !important;
  transform: none;
  filter: blur(0px);
}

.hidden-left:nth-child(2),
.hidden-right:nth-child(2) {
  transition-delay: 200ms;
}

.hidden-left:nth-child(3),
.hidden-right:nth-child(3) {
  transition-delay: 250ms;
}

.hidden-left:nth-child(4),
.hidden-right:nth-child(4) {
  transition-delay: 300ms;
}


footer { /*------------------------------------------------------------------*/
  height: 100%;
  background-color: var(--site-black);
  color: var(--text-white);
  padding: 2% 10%;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  list-style: none;
}

footer a {
  color: var(--text-white);
} footer a:hover {
  text-decoration: underline;
}

footer div.copyright {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 10%;
  padding: 0% 0% 2% 0%;
}

footer div.seperator {
  border-left: 1px solid var(--text-white);
  height: 80%;
  width: 1%;
}

footer div.map {
  width: 70%;
}

footer div.map ul.map  {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  list-style: none;
  padding-left: 0%;
}

footer div.map ul.map ul {
  width: 25%;
  list-style: none;
  padding-left: 0%;
}

